adjust popup window apperance

--- a/popup.html
+++ b/popup.html
@@ -2,10 +2,24 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Flight Price Tracker</title>
-    <style>
-        body { font-family: Arial, sans-serif; width: 200px; padding: 10px; }
-    </style>
+        <title>Flight Price Tracker</title>
+        <style>
+            body { 
+                font-family: Arial, sans-serif; 
+                width: 200px; 
+                padding: 10px; 
+                text-align: center;
+            }
+            h3 {
+                margin: 0%;
+                font-size: 18px;
+            }
+            p {
+                margin: 10px 0 0;
+                font-size: 14px;
+                color: #666;
+            }
+        </style>
     </head>
     <body>
         <h3>Flight Ticket Price Tracker</h3>
